<resources>
    <string name="app_name">HelpBoss</string>
    <string name="titleAuth">Авторизация</string>
    <string name="hintLogin">логин</string>
    <string name="hintPassword">пароль</string>
    <string name="whatThePass">Забыли пароль?</string>
    <string name="btnMainAuth">Войти</string>
    <string name="btnRegistry"><u>Регистрация</u></string>
    <string name="hintEditMsgChat">Сообщение</string>
    <string name="hintCreateLogin">Придумайте логин</string>
    <string name="hintCreatePassword">Придумайте пароль</string>
    <string name="hintRepeatPassword">Повторите пароль</string>
    <string name="hintEditEmail">Введите Ваш e-mail</string>
    <string name="registration">Регистрация</string>
    <string name="title_dialog_reg">Вы успешно зарегестрировались!\nАвторизуйтесь</string>
    <string name="passwordRecovery">Восстановление пароля</string>
    <string name="next">Далее</string>
    <string name="descPassRec">Введите код, отправленный на Ваш e-mail</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти</string>
    <string name="profile">Профиль</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="becone_author">Стать автором</string>
</resources>
