<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_backgroundPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_fon" />




    <LinearLayout
        android:id="@+id/main_containerPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/titleAuthPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordRecovery"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/errorPasswordRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textColor="@color/errorWindowAuth"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>



        <LinearLayout
            android:id="@+id/containerEmailPassRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/emailPassRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/black_border_bottom"
                android:ems="10"
                android:hint="@string/hintEditEmail"
                android:inputType="textEmailSubject" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerButtonPassEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnEmailRecPassEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_auth_main"
                android:onClick="sendEmailToServer"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/next" />
        </LinearLayout>


        <TextView
            android:id="@+id/descriptionPasswordRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descPassRec"
            android:gravity="center"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/containerCodePassRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/codePassRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/black_border_bottom"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="30sp"
                android:hint="*****"
                android:letterSpacing="0.6"
                android:maxLength="5"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerButtonPassCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btnEmailRecPassCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_auth_main"
                android:onClick="sendCodeToServer"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/next" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/containerPasswordRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/passwordRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/black_border_bottom"
                android:ems="10"
                android:hint="@string/hintCreatePassword"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerPasswordRepeatRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/passwordRepeatRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/black_border_bottom"
                android:ems="10"
                android:hint="@string/hintRepeatPassword"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerButtonPasswordNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btnEmailRecPasswordNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_auth_main"
                android:onClick="sendPasswordToServer"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>